--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.8",
     "autoprefixer": "^10.4.15",
+    "g": "^2.0.1",
     "gatsby": "^5.12.4",
     "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.12.0",
     "gatsby-plugin-manifest": "^5.12.0",
     "gatsby-plugin-postcss": "^6.12.0",
+    "gatsby-plugin-react-helmet": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.0",
     "gatsby-plugin-sitemap": "^6.12.0",
     "gatsby-source-filesystem": "^5.12.0",
     "gatsby-source-wordpress": "^7.12.0",
     "gatsby-transformer-json": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
+    "netlify-cli": "^16.4.0",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
