--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@fontsource-variable/inter": "^5.0.8",
+    "@mui/icons-material": "^5.14.12",
     "autoprefixer": "^10.4.15",
     "g": "^2.0.1",
     "gatsby": "^5.12.4",
@@ -36,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-helmet": "^6.1.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
