--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-helmet": "^6.1.0",
+    "react-icons": "^4.11.0",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "^3.3.3"
   },
