--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-fast-marquee": "^1.6.0",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.11.0",
+    "react-share": "^4.4.1",
     "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "^3.3.3"
   },
