--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gatsby-source-wordpress": "^7.12.0",
     "gatsby-transformer-json": "^5.12.0",
     "gatsby-transformer-sharp": "^5.12.0",
+    "material-icons": "^1.13.12",
     "netlify-cli": "^16.4.0",
     "postcss": "^8.4.29",
     "react": "^18.2.0",
