--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fontsource-variable/inter": "^5.0.8",
     "@mui/icons-material": "^5.14.12",
     "autoprefixer": "^10.4.15",
